update project - version 2

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=lab211-vaccinemanagement-ant
-main.class=Main.MainControl
+main.class=origin.Main.MainControl
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
